# ami-uploader

./: .gitignore  Cargo.toml  README.md
scripts/: install.sh
src/: main.rs  ops.rs
